force-app/main/default/objects/Guarantor__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/action/quick/Guarantor__c.Edit_Guarantor?objectApiName&amp;context=RECORD_DETAIL&amp;recordId=&quot;&amp; CASESAFEID(Id)&amp;&quot;&amp;backgroundContext=%2Flightning%2Fr%2FSurvey__c%2F&quot;&amp;CASESAFEID(Survey__c)&amp;&quot;%2Fview&quot;, &quot;Edit&quot; , &apos;_self&apos;) + &apos; | &apos; + HYPERLINK(&quot;/lightning/action/quick/Guarantor__c.Delete_Guarantor?objectApiName&amp;context=RECORD_DETAIL&amp;recordId=&quot;&amp; CASESAFEID(Id)&amp;&quot;&amp;backgroundContext=%2Flightning%2Fr%2FSurvey__c%2F&quot;&amp;CASESAFEID(Survey__c)&amp;&quot;%2Fview&quot;, &quot;Delete&quot; , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action</label>
    <type>Text</type>
</CustomField>