force-app/main/default/objects/Guarantor__c/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Type</label>
    <referenceTo>Master_Company_Type__c</referenceTo>
    <relationshipLabel>Guarantors</relationshipLabel>
    <relationshipName>Guarantors</relationshipName>
    <type>Lookup</type>
</CustomField>