force-app/main/default/objects/Guarantor__c/fields/Domicile_Address_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Domicile_Address_Guarantor__c</fullName>
    <label>Domicile Address Guarantor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>