force-app/main/default/objects/Guarantor__c/fields/Domicile_City_Kabupaten_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Domicile_City_Kabupaten_Guarantor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Domicile City/Kabupaten</label>
    <referenceTo>City_Master_Data__c</referenceTo>
    <relationshipLabel>Guarantors (Domicile City/Kabupaten)</relationshipLabel>
    <relationshipName>Guarantors1</relationshipName>
    <type>Lookup</type>
</CustomField>