force-app/main/default/objects/Guarantor__c/fields/Domicile_Kecamatan_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Domicile_Kecamatan_Guarantor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Domicile Kecamatan</label>
    <referenceTo>District_Master_Data__c</referenceTo>
    <relationshipLabel>Guarantors (Domicile Kecamatan)</relationshipLabel>
    <relationshipName>Guarantors1</relationshipName>
    <type>Lookup</type>
</CustomField>