force-app/main/default/objects/Guarantor__c/fields/Domicile_Kelurahan_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Domicile_Kelurahan_Guarantor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Domicile Kelurahan</label>
    <referenceTo>Sub_District_Master_Data__c</referenceTo>
    <relationshipLabel>Guarantors (Domicile Kelurahan)</relationshipLabel>
    <relationshipName>Guarantors1</relationshipName>
    <type>Lookup</type>
</CustomField>