force-app/main/default/objects/Guarantor__c/fields/Domicile_Province_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Domicile_Province_Guarantor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Domicile Province</label>
    <referenceTo>Province_Master_Data__c</referenceTo>
    <relationshipLabel>Guarantors (Domicile Province)</relationshipLabel>
    <relationshipName>Guarantors1</relationshipName>
    <type>Lookup</type>
</CustomField>