force-app/main/default/objects/Guarantor__c/fields/Domicile_RT__c.field-meta.xml
<CustomField>
    <fullName>Domicile_RT__c</fullName>
    <label>Domicile RT</label>
    <length>10</length>
    <type>Text</type>
</CustomField>