force-app/main/default/objects/Guarantor__c/fields/Economy_Sector__c.field-meta.xml
<CustomField>
    <fullName>Economy_Sector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Economy Sector</label>
    <referenceTo>API_Economy_Sector__c</referenceTo>
    <relationshipLabel>Guarantors</relationshipLabel>
    <relationshipName>Guarantors</relationshipName>
    <type>Lookup</type>
</CustomField>