force-app/main/default/objects/Guarantor__c/fields/Family_Relation_Code__c.field-meta.xml
<CustomField>
    <fullName>Family_Relation_Code__c</fullName>
    <label>Family Relation Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>