force-app/main/default/objects/Guarantor__c/fields/Guarantor_Map_URL__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Map_URL__c</fullName>
    <label>Guarantor Map URL</label>
    <type>Url</type>
</CustomField>