force-app/main/default/objects/Guarantor__c/fields/Guarantor_NPWP__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_NPWP__c</fullName>
    <label>Guarantor NPWP</label>
    <length>32</length>
    <type>Text</type>
</CustomField>