force-app/main/default/objects/Guarantor__c/fields/Guarantor_Type__c.field-meta.xml
<CustomField>
    <fullName>Guarantor_Type__c</fullName>
    <label>Guarantor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Guarantor</fullName>
            </value>
            <value>
                <fullName>Corporate Guarantor</fullName>
            </value>
            <value>
                <fullName>Payment Guarantor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>