force-app/main/default/objects/Guarantor__c/fields/Industry_Type__c.field-meta.xml
<CustomField>
    <fullName>Industry_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry Type</label>
    <referenceTo>API_Industry_Group_and_Type__c</referenceTo>
    <relationshipLabel>Guarantors</relationshipLabel>
    <relationshipName>Guarantors</relationshipName>
    <type>Lookup</type>
</CustomField>