force-app/main/default/objects/Guarantor__c/fields/Job_Address_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Job_Address_Guarantor__c</fullName>
    <label>Job Address Guarantor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>