force-app/main/default/objects/Guarantor__c/fields/Legal_Kecamatan_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Legal_Kecamatan_Guarantor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Kecamatan</label>
    <referenceTo>District_Master_Data__c</referenceTo>
    <relationshipLabel>Guarantors</relationshipLabel>
    <relationshipName>Guarantors</relationshipName>
    <type>Lookup</type>
</CustomField>