force-app/main/default/objects/Guarantor__c/fields/Legal_Province_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Legal_Province_Guarantor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Province</label>
    <referenceTo>Province_Master_Data__c</referenceTo>
    <relationshipLabel>Guarantors</relationshipLabel>
    <relationshipName>Guarantors</relationshipName>
    <type>Lookup</type>
</CustomField>