force-app/main/default/objects/Guarantor__c/fields/Legal_RT_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Legal_RT_Guarantor__c</fullName>
    <label>Legal RT</label>
    <length>10</length>
    <type>Text</type>
</CustomField>