force-app/main/default/objects/Guarantor__c/fields/Marital_Status_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status_Guarantor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marital Status Guarantor</label>
    <referenceTo>Master_Marital__c</referenceTo>
    <relationshipLabel>Guarantors</relationshipLabel>
    <relationshipName>Guarantors</relationshipName>
    <type>Lookup</type>
</CustomField>