force-app/main/default/objects/Guarantor__c/fields/Master_Occupation_New__c.field-meta.xml
<CustomField>
    <fullName>Master_Occupation_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Occupation</label>
    <referenceTo>Master_Occupation_New__c</referenceTo>
    <relationshipLabel>Guarantors</relationshipLabel>
    <relationshipName>Guarantors</relationshipName>
    <type>Lookup</type>
</CustomField>