force-app/main/default/objects/Guarantor__c/fields/Mobile_Phone_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_Guarantor__c</fullName>
    <label>Mobile Phone Guarantor</label>
    <length>32</length>
    <type>Text</type>
</CustomField>