force-app/main/default/objects/Guarantor__c/fields/Name_Relationship_Other__c.field-meta.xml
<CustomField>
    <fullName>Name_Relationship_Other__c</fullName>
    <label>Name Relationship Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>