force-app/main/default/objects/Guarantor__c/fields/Relationship_with_Customer__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_Customer__c</fullName>
    <label>Relationship with Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>