force-app/main/default/objects/Guarantor__c/fields/Relationship_with_Customer_Formula__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_Customer_Formula__c</fullName>
    <formula>IF(ISPICKVAL(Guarantor_Type__c, &quot;Personal Guarantor&quot;), &quot;Personal Guarantor&quot;, 
   IF(ISPICKVAL(Guarantor_Type__c, &quot;Corporate Guarantor&quot;), &quot;Corporate Guarantor&quot;, 
   &quot;Payment Guarantor&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship with Customer</label>
    <type>Text</type>
</CustomField>