force-app/main/default/objects/Guarantor__c/fields/Relationship_with_Customer_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_Customer_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship with Customer</label>
    <referenceTo>Master_Relationship__c</referenceTo>
    <relationshipLabel>Guarantors</relationshipLabel>
    <relationshipName>Guarantors</relationshipName>
    <type>Lookup</type>
</CustomField>