force-app/main/default/objects/Guarantor__c/fields/Same_As_Legal_Address__c.field-meta.xml
<CustomField>
    <fullName>Same_As_Legal_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same_As_Legal_Address</label>
    <type>Checkbox</type>
</CustomField>