force-app/main/default/objects/Guarantor__c/fields/Year_of_Established__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Established__c</fullName>
    <label>Year of Established</label>
    <length>10</length>
    <type>Text</type>
</CustomField>